--- a/.jupyter/custom/custom.css
+++ b/.jupyter/custom/custom.css
@@ -1,8 +1,3 @@
-/* custom.css */
-.cm-trailingspace {
-  border-bottom: 1px solid #ccc;
-}
-
 @font-face {
  font-family: 'Droid Sans Mono';
  font-weight: normal;
@@ -1941,10 +1936,21 @@ div.cell.text_cell .cm-s-default span.cm-variable-3 {
  width: auto;
 }
 div#maintoolbar {
- display: none !important;
+ margin-left: 8px !important;
 }
-#header-container {
- display: none !important;
+span.save_widget span.filename {
+ margin-left: 8px;
+ font-size: 120%;
+ color: #48a667;
+ background-color: #2c303c;
+}
+span.save_widget span.filename:hover {
+ color: #2b84ff;
+ background-color: #2c303c;
+}
+#menubar {
+ padding-top: 4px;
+ background-color: #1c1f28;
 }
 
 /**********************************
