--- a/.jupyter/custom/custom.css
+++ b/.jupyter/custom/custom.css
@@ -488,7 +488,6 @@ i.fa.fa-icon {
  background-color: #373e4b;
  background: #373e4b;
  line-height: 1.3;
- margin: 0px;
 }
 .dropdown-menu:hover {
  font-family: "Exo_2", sans-serif;
@@ -658,8 +657,12 @@ div.kse-dropdown > .dropdown-menu,
 .btn-group > .btn:first-child {
  margin-left: 3px;
 }
-.alternate_upload .btn-upload {
- display: none;
+.alternate_upload input.fileinput {
+ text-align: center;
+ vertical-align: bottom;
+ margin-left: -.5ex;
+ display: -webkit-inline-box;
+ border: none;
 }
 button.close {
  border: 0px none;
@@ -962,13 +965,15 @@ div.prompt,
 }
 div.prompt.input_prompt {
  background-color: #2c303c;
- border-right: 2px solid rgba(83,180,115,.5);
  border-top-left-radius: 2px;
  border-top-right-radius: 0px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
  min-width: 12ex;
  width: 12ex !important;
+}
+div.cell.code_cell .input_prompt {
+ border-right: 2px solid rgba(83,180,115,.5);
 }
 div.output_wrapper {
  background-color: #373e4b;
@@ -1107,6 +1112,9 @@ div.edit_mode div.text_cell.unrendered {
  background-color: #2c303c;
  border-radius: 2px;
 }
+div.cell.text_cell .input_prompt {
+ border-right: 0;
+}
 div.cell.text_cell.rendered .input_prompt {
  font-family: "Fira Code", monospace;
  font-size: 9.5pt;
@@ -1116,7 +1124,6 @@ div.cell.text_cell.rendered .input_prompt {
  min-width: 12ex;
  width: 12ex !important;
  background-color: #2c303c;
- border-right: 2px solid rgba(83,180,115,.5);
 }
 div.cell.text_cell.unrendered .input_prompt {
  font-family: "Fira Code", monospace;
@@ -1126,7 +1133,6 @@ div.cell.text_cell.unrendered .input_prompt {
  text-align: left !important;
  min-width: 12ex;
  width: 12ex !important;
- border-right: 2px solid rgba(83,180,115,.5);
 }
 div.rendered_html code {
  font-family: "Droid Sans Mono", monospace;
@@ -1799,10 +1805,10 @@ div.tooltiptext.bigtooltip {
  border-radius: 0px;
 }
 .cm-s-ipython .CodeMirror-linenumber {
- color: #434d60;
+ color: #92a2bd;
 }
 .cm-s-ipython .CodeMirror-cursor {
- border-left: 2px solid #0095ff;
+ border-left: 2px solid #0095ff !important;
 }
 .cm-s-ipython span.cm-comment {
  color: #526488;
@@ -1906,7 +1912,7 @@ div.cell.text_cell .cm-s-default span.cm-variable-3 {
  color: #61afef;
 }
 .CodeMirror-cursor {
- border-left: 2px solid #0095ff;
+ border-left: 2px solid #0095ff !important;
  border-right: none;
  width: 0;
 }
