--- a/.jupyter/custom/custom.css
+++ b/.jupyter/custom/custom.css
@@ -1,8 +1,8 @@
 @font-face {
- font-family: 'Droid Sans Mono';
+ font-family: 'Fira Code';
  font-weight: normal;
  font-style: normal;
- src: local('Droid Sans Mono'), url('fonts/droid-sans-mono.woff') format('woff');
+ src: local('Fira Code'), url('fonts/firacode.otf') format('opentype');
 }
 @font-face {
  font-family: 'Exo_2';
@@ -11,16 +11,16 @@
  src: local('Exo_2'), url('fonts/exo-II-regular.ttf') format('truetype');
 }
 @font-face {
- font-family: 'Fira Code';
- font-weight: normal;
- font-style: normal;
- src: local('Fira Code'), url('fonts/firacode.otf') format('opentype');
-}
-@font-face {
  font-family: 'Lora';
  font-weight: normal;
  font-style: normal;
- src: local('Lora'), url('fonts/Lora-Regular.ttf') format('truetype');
+ src: local('Lora'), url('fonts/lora-regular.ttf') format('truetype');
+}
+@font-face {
+ font-family: 'Droid Sans Mono';
+ font-weight: normal;
+ font-style: normal;
+ src: local('Droid Sans Mono'), url('fonts/droid-sans-mono.woff') format('woff');
 }
 div#notebook {
  font-family: "Exo_2", sans-serif;
@@ -662,7 +662,7 @@ div.kse-dropdown > .dropdown-menu,
  vertical-align: bottom;
  margin-left: -.5ex;
  display: -webkit-inline-box;
- border: none;
+ border: soldi 1px #3a4452;
 }
 button.close {
  border: 0px none;
@@ -948,6 +948,15 @@ div.cell.edit_mode {
  border: medium solid #455c4d;
  border-top-right-radius: 2px;
  border-top-left-radius: 2px;
+}
+div.CodeMirror-sizer {
+ margin-left: 0px;
+ margin-bottom: -21px;
+ border-right-width: 16px;
+ min-height: 37px;
+ padding-right: 0px;
+ padding-bottom: 0px;
+ margin-top: 3px;
 }
 div.prompt,
 .prompt {
