--- a/.jupyter/custom/custom.css
+++ b/.jupyter/custom/custom.css
@@ -1,4 +1,10 @@
 @font-face {
+ font-family: 'Lora';
+ font-weight: normal;
+ font-style: normal;
+ src: local('Lora'), url('fonts/lora-regular.ttf') format('truetype');
+}
+@font-face {
  font-family: 'Exo_2';
  font-weight: normal;
  font-style: normal;
@@ -11,16 +17,10 @@
  src: local('Droid Sans Mono'), url('fonts/droid-sans-mono.woff') format('woff');
 }
 @font-face {
- font-family: 'Droid Sans Mono';
+ font-family: 'Fira Code';
  font-weight: normal;
  font-style: normal;
- src: local('Droid Sans Mono'), url('fonts/droid-sans-mono.woff') format('woff');
-}
-@font-face {
- font-family: 'Lora';
- font-weight: normal;
- font-style: normal;
- src: local('Lora'), url('fonts/lora-regular.ttf') format('truetype');
+ src: local('Fira Code'), url('fonts/firacode.otf') format('opentype');
 }
 div#notebook {
  font-family: "Exo_2", sans-serif;
