--- a/.jupyter/custom/custom.css
+++ b/.jupyter/custom/custom.css
@@ -1,26 +1,26 @@
 @font-face {
+ font-family: 'Lora';
+ font-weight: normal;
+ font-style: normal;
+ src: local('Lora'), url('fonts/Lora-Regular.ttf') format('truetype');
+}
+@font-face {
  font-family: 'Exo_2';
  font-weight: normal;
  font-style: normal;
  src: local('Exo_2'), url('fonts/exo-II-regular.ttf') format('truetype');
 }
 @font-face {
- font-family: 'Lora';
+ font-family: 'Fira Code';
  font-weight: normal;
  font-style: normal;
- src: local('Lora'), url('fonts/lora-regular.ttf') format('truetype');
+ src: local('Fira Code'), url('fonts/firacode.otf') format('opentype');
 }
 @font-face {
  font-family: 'Droid Sans Mono';
  font-weight: normal;
  font-style: normal;
  src: local('Droid Sans Mono'), url('fonts/droid-sans-mono.woff') format('woff');
-}
-@font-face {
- font-family: 'Fira Code';
- font-weight: normal;
- font-style: normal;
- src: local('Fira Code'), url('fonts/firacode.otf') format('opentype');
 }
 div#notebook {
  font-family: "Exo_2", sans-serif;
@@ -67,8 +67,8 @@ div#running .row.list_header {
 }
 div#cluster_list > div.list_item.row,
 div#cluster_list > div.list_item.row:hover {
- background: #384152;
- background-color: #384152;
+ background: #363f4f;
+ background-color: #363f4f;
 }
 div#clusters.tab-pane.active {
  font-size: 12.0pt;
@@ -91,14 +91,14 @@ div#clusters.tab-pane.active {
  color: #899ab8;
 }
 #running .panel-group .panel .panel-body .list_container .list_item {
- background: #384152;
- background-color: #384152;
+ background: #363f4f;
+ background-color: #363f4f;
  padding: 2px;
  border-bottom: 2px solid rgba(83,180,115,.3);
 }
 #running .panel-group .panel .panel-body .list_container .list_item:hover {
- background: #384152;
- background-color: #384152;
+ background: #363f4f;
+ background-color: #363f4f;
 }
 #running .panel-group .panel .panel-body {
  padding: 2px;
@@ -326,14 +326,14 @@ body > #header .header-bar {
 .navbar-default {
  background-color: #1c1f28;
  margin-bottom: 0px;
- margin-top: 5px;
+ margin-top: 3px;
 }
 .navbar {
  border: none;
 }
 div.navbar-text,
 .navbar-text {
- margin-top: 6px !important;
+ margin-top: 5px !important;
  margin-bottom: 0px;
 }
 .navbar-default {
@@ -410,7 +410,7 @@ div.navbar-text,
  color: #48a667;
  background: #1c1f28;
  background-color: #1c1f28;
- font-size: 16pt;
+ font-size: 15pt;
  border-left: 2px solid #48a667;
  padding-bottom: 2px;
 }
@@ -418,7 +418,7 @@ div.navbar-text,
  color: #48a667;
  background: #1c1f28;
  background-color: #1c1f28;
- font-size: 16pt;
+ font-size: 15pt;
  padding-left: 5px;
  padding-right: 5px;
  margin-top: 10px;
@@ -429,10 +429,10 @@ div.navbar-text,
  color: #48a667;
  background: #1c1f28;
  background-color: #1c1f28;
- font-size: 15.5pt;
+ font-size: 13.5pt;
  padding-left: 5px;
  padding-right: 5px;
- margin-top: 10px;
+ margin-top: 8px;
  vertical-align: text-bottom;
  padding-bottom: 0px;
 }
@@ -664,6 +664,10 @@ div.kse-dropdown > .dropdown-menu,
  display: -webkit-inline-box;
  border: soldi 1px #3a4452;
 }
+.alternate_upload .btn-upload {
+ height: 22px;
+ padding: 0px 6px 0px 5px;
+}
 button.close {
  border: 0px none;
  font-family: sans-serif;
@@ -684,14 +688,14 @@ button.close {
  opacity: 1;
 }
 div.btn.btn-default.output_collapsed {
- background: #2e3642;
- background-color: #2e3642;
- border-color: #2e3642;
-}
-div.btn.btn-default.output_collapsed:hover {
  background: #2a313c;
  background-color: #2a313c;
  border-color: #2a313c;
+}
+div.btn.btn-default.output_collapsed:hover {
+ background: #262c36;
+ background-color: #262c36;
+ border-color: #262c36;
 }
 div.nbext-enable-btns .btn[disabled],
 div.nbext-enable-btns .btn[disabled]:hover,
@@ -718,7 +722,7 @@ fieldset[disabled] .btn-default.focus {
  height: auto;
  color: #899ab8;
  text-align: center;
- background-color: #2a313c;
+ background-color: #262c36;
  border: none;
 }
 .btn-group > .btn + .dropdown-toggle {
@@ -804,14 +808,14 @@ div.modal-footer > button:hover {
  padding: 5px;
 }
 .modal-body {
- background-color: #384152;
+ background-color: #363f4f;
  position: relative;
  padding: 15px;
 }
 .modal-footer {
  padding: 10px;
  text-align: right;
- background-color: #384152;
+ background-color: #363f4f;
  border-top: 1px solid rgba(80,92,133,.22);
 }
 .alert-info {
@@ -834,7 +838,7 @@ div.panel-default,
 .panel-default {
  font-family: "Exo_2", sans-serif;
  font-size: 12.0pt;
- background-color: #384152;
+ background-color: #363f4f;
  color: #899ab8;
  margin-bottom: 14px;
  border: 0;
@@ -863,8 +867,8 @@ div.form-control,
  font-family: "Exo_2", sans-serif;
  font-size: inherit;
  color: #899ab8;
- background-color: #2a313c;
- border: 2px solid #2a313c;
+ background-color: #262c36;
+ border: 2px solid #262c36;
  margin-left: 2px;
  height: auto;
  box-shadow: none;
@@ -873,7 +877,7 @@ div.form-control,
 }
 .form-group.list-group-item {
  color: #899ab8;
- background-color: #384152;
+ background-color: #363f4f;
  border-color: rgba(80,92,133,.22);
  margin-bottom: 0px;
 }
@@ -881,7 +885,7 @@ input,
 button,
 select,
 textarea {
- background-color: #2a313c;
+ background-color: #262c36;
  font-weight: normal;
  border: 1px solid rgba(80,92,133,.22);
 }
@@ -1148,8 +1152,8 @@ div.rendered_html code {
  font-size: 11pt;
  padding-top: 3px;
  color: #b5c2d9;
- background: #2a313c;
- background-color: #2a313c;
+ background: #262c36;
+ background-color: #262c36;
 }
 pre,
 code,
@@ -1162,14 +1166,14 @@ code {
  font-size: 11pt !important;
  line-height: 170% !important;
  color: #abb7ce;
- background: #2a313c;
- background-color: #2a313c;
+ background: #262c36;
+ background-color: #262c36;
 }
 kbd {
  padding: 4px;
  font-size: 11pt;
  color: #b5c2d9;
- background-color: #2a313c;
+ background-color: #262c36;
  border: 0;
  box-shadow: none;
 }
@@ -1180,8 +1184,8 @@ pre {
  font-size: 12.0pt;
  line-height: 1.42857143;
  color: #b5c2d9;
- background-color: #2a313c;
- border: 1px solid #2a313c;
+ background-color: #262c36;
+ border: 1px solid #262c36;
  border-radius: 2px;
 }
 div.rendered_html {
@@ -1193,9 +1197,9 @@ div.text_cell_render pre {
  font-size: 11pt !important;
  line-height: 170% !important;
  color: #abb7ce;
- background: #2a313c;
- background-color: #2a313c;
- border: 2px #2a313c solid;
+ background: #262c36;
+ background-color: #262c36;
+ border: 2px #262c36  solid;
  max-width: 86%;
  border-radius: 2px;
  padding: 5px;
@@ -1542,9 +1546,9 @@ input.raw_input {
  font-family: "Droid Sans Mono", monospace;
  font-size: 11pt !important;
  color: #b5c2d9;
- background-color: #2a313c;
- border-color: #282f39;
- background: #282f39;
+ background-color: #262c36;
+ border-color: #242a33;
+ background: #242a33;
  width: auto;
  vertical-align: baseline;
  padding: 0em 0.25em;
@@ -1827,13 +1831,13 @@ div.tooltiptext.bigtooltip {
  color: #61afef;
 }
 .cm-s-ipython span.cm-number {
- color: #e2a271;
+ color: #f0a46f;
 }
 .cm-s-ipython span.cm-property {
- color: #61afef;
+ color: #b5c2d9;
 }
 .cm-s-ipython span.cm-attribute {
- color: #ea8080;
+ color: #b5c2d9;
 }
 .cm-s-ipython span.cm-keyword {
  color: #cc89e0;
@@ -1846,7 +1850,7 @@ div.tooltiptext.bigtooltip {
  color: #51b6c3;
 }
 .cm-s-ipython span.cm-operator {
- color: #5cadf1;
+ color: #61afef;
 }
 .cm-s-ipython span.cm-builtin {
  color: #ea8080;
@@ -1871,7 +1875,7 @@ div.tooltiptext.bigtooltip {
  color: #61afef;
 }
 .cm-s-ipython span.cm-link {
- color: #e2a271;
+ color: #f0a46f;
 }
 .cm-s-ipython span.cm-storage {
  color: #61afef;
@@ -1915,7 +1919,7 @@ div.cell.text_cell .cm-s-default span.cm-variable-3 {
  color: #cc89e0;
 }
 .cm-s-default .cm-number {
- color: #e2a271;
+ color: #f0a46f;
 }
 .cm-s-default .cm-error {
  color: #61afef;
@@ -1987,7 +1991,6 @@ span.save_widget span.filename:hover {
 <script>
     MathJax.Hub.Config({
         "HTML-CSS": {
-            preferredFont: "TeX",
             availableFonts: ["STIX","TeX"],
             styles: {
                 scale: 110,
