--- a/.jupyter/custom/custom.css
+++ b/.jupyter/custom/custom.css
@@ -1,8 +1,8 @@
 @font-face {
- font-family: 'Exo_2';
+ font-family: 'Fira Code';
  font-weight: normal;
  font-style: normal;
- src: local('Exo_2'), url('fonts/exo-II-regular.ttf') format('truetype');
+ src: local('Fira Code'), url('fonts/firacode.otf') format('opentype');
 }
 @font-face {
  font-family: 'Source Code Pro';
@@ -17,16 +17,16 @@
  src: local('Source Code Pro'), url('fonts/source-code-pro.otf') format('opentype');
 }
 @font-face {
+ font-family: 'Exo_2';
+ font-weight: normal;
+ font-style: normal;
+ src: local('Exo_2'), url('fonts/exo-II-regular.ttf') format('truetype');
+}
+@font-face {
  font-family: 'Merriweather';
  font-weight: normal;
  font-style: normal;
  src: local('Merriweather'), url('fonts/Merriweather-Regular.ttf') format('truetype');
-}
-@font-face {
- font-family: 'Fira Code';
- font-weight: normal;
- font-style: normal;
- src: local('Fira Code'), url('fonts/firacode.otf') format('opentype');
 }
 div#notebook {
  font-family: "Exo_2", sans-serif;
@@ -291,7 +291,7 @@ div#notebook {
  background-color: #1c1f28;
 }
 #notebook-container {
- padding: 13px;
+ padding: 13px 2px;
  background-color: #1c1f28;
  min-height: 0px;
  box-shadow: none;
@@ -311,18 +311,21 @@ div#ipython-main-app.container {
  margin-right: auto;
  margin-left: auto;
 }
-.notebook_app #header {
+.notebook_app #header,
+.edit_app #header {
  box-shadow: none !important;
  background-color: #1c1f28;
  border-bottom: 2px solid rgba(80,92,133,.22);
 }
-#header {
+#header,
+.edit_app #header {
  font-family: "Exo_2", sans-serif;
  font-size: 13pt;
  box-shadow: none;
  background-color: #1c1f28;
 }
-#header .header-bar {
+#header .header-bar,
+.edit_app #header .header-bar {
  background: #1c1f28;
  background-color: #1c1f28;
 }
@@ -343,9 +346,12 @@ body > #header .header-bar {
  border: none;
 }
 div.navbar-text,
-.navbar-text {
- margin-top: 5px !important;
+.navbar-text,
+.navbar-text.indicator_area,
+p.navbar-text.indicator_area {
+ margin-top: 8px !important;
  margin-bottom: 0px;
+ color: #7aa05d;
 }
 .navbar-default {
  font-family: "Exo_2", sans-serif;
@@ -378,6 +384,9 @@ div.navbar-text,
  background-color: #2769c3;
  border-color: #2769c3;
  line-height: 1.5em;
+}
+.navbar-nav > li > .dropdown-menu {
+ margin-top: 2px;
 }
 #notification_trusted {
  font-family: "Exo_2", sans-serif;
@@ -415,8 +424,8 @@ div.navbar-text,
 }
 .running_notebook_icon:before {
  color: #94c273 !important;
- font: normal normal normal 17px/1 FontAwesome;
- font-size: 17px;
+ font: normal normal normal 15px/1 FontAwesome;
+ font-size: 15px;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
@@ -424,9 +433,9 @@ div.navbar-text,
  vertical-align: middle;
 }
 .item_buttons .running-indicator {
- padding-top: 3px;
+ padding-top: 4px;
  color: #94c273;
- font: "Exo_2", sans-serif;
+ font-family: "Exo_2", sans-serif;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
 }
@@ -911,7 +920,7 @@ div.panel-default > .panel-heading {
 div.container-fluid {
  margin-right: auto;
  margin-left: auto;
- padding-left: 7px;
+ padding-left: 0px;
  padding-right: 12px;
 }
 div.form-control,
@@ -959,8 +968,8 @@ div.output.output_scroll {
  border-radius: 6px;
 }
 ::-webkit-scrollbar {
- width: 12px;
- height: 12px;
+ width: 9px;
+ height: 9px;
  background-color: #798cae;
  border-radius: 6px;
 }
@@ -1227,7 +1236,7 @@ div.cell.text_cell.selected.jupyter-soft-selected:before {
 }
 .edit_mode div.cell.text_cell.selected:before,
 div.cell.text_cell.selected.jupyter-soft-selected:before {
- background: #33517c;
+ background: #455c4d;
  border: 2px solid #455c4d;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
@@ -1361,6 +1370,7 @@ div.rendered_html h5 {
  color: #7aa05d;
  font-size: 220%;
  text-align: center;
+ font-style: normal;
  font-weight: lighter;
 }
 .rendered_html h2,
@@ -1375,23 +1385,22 @@ div.rendered_html h5 {
 .text_cell_render h3 {
  font-size: 150%;
  color: #7aa05d;
- font-weight: lighter;
- text-decoration: italic;
  font-style: normal;
+ font-weight: lighter;
 }
 .rendered_html h4,
 .text_cell_render h4 {
  font-size: 120%;
  color: #7aa05d;
- font-weight: underline;
  font-style: normal;
+ font-weight: lighter;
 }
 .rendered_html h5,
 .text_cell_render h5 {
  font-size: 100%;
  color: #bbc2e0;
+ font-style: normal;
  font-weight: lighter;
- text-decoration: underline;
 }
 div#_vivaldi-spatnav-focus-indicator._vivaldi-spatnav-focus-indicator {
  position: absolute;
@@ -1515,7 +1524,7 @@ div.widget-hbox .widget-label,
 .rendered_html :visited,
 .rendered_html :visited:active,
 .rendered_html :visited:focus {
- color: #759acd;
+ color: #6297e0;
 }
 .rendered_html :visited:hover,
 .rendered_html :link:hover {
@@ -1907,6 +1916,24 @@ div#short-key-bindings-intro.well,
  -webkit-box-shadow: none;
  box-shadow: none;
 }
+#texteditor-backdrop {
+ background: #1c1f28;
+ background-color: #1c1f28;
+}
+#texteditor-backdrop #texteditor-container .CodeMirror-gutter,
+#texteditor-backdrop #texteditor-container .CodeMirror-gutters {
+ background: #353a48;
+ background-color: #353a48;
+ color: #526488;
+}
+.edit_app #menubar .navbar {
+ margin-bottom: 0px;
+}
+#texteditor-backdrop #texteditor-container {
+ padding: 0px;
+ background-color: #2c303c;
+ box-shadow: none;
+}
 div.CodeMirror,
 div.CodeMirror pre {
  font-family: "Source Code Pro", monospace;
@@ -2002,12 +2029,30 @@ div.tooltiptext.bigtooltip {
  background: #373d4b;
 }
 .cm-s-ipython .CodeMirror-gutters {
- background: #303441;
+ background: #353a48;
  border: none;
  border-radius: 0px;
 }
 .cm-s-ipython .CodeMirror-linenumber {
- color: #92a2bd;
+ color: #526488;
+}
+.CodeMirror-sizer {
+ margin-left: 40px;
+}
+.CodeMirror-gutter,
+.CodeMirror-gutters,
+.CodeMirror-linenumber {
+ background: #353a48;
+ background-color: #353a48;
+ border-color: #353a48;
+ padding-right: 4px;
+}
+.CodeMirror-gutter.CodeMirror-linenumbers,
+div.CodeMirror-gutter.CodeMirror-linenumbers {
+ width: 34px;
+}
+.CodeMirror-linenumber {
+ color: #526488;
 }
 .cm-s-ipython .CodeMirror-cursor {
  border-left: 2px solid #0095ff !important;
@@ -2083,8 +2128,25 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
  color: #d8dcee;
  background: rgba(192,57,67,.3) !important;
 }
+.cm-header-1 {
+ font-size: 220%;
+}
+.cm-header-2 {
+ font-size: 170%;
+}
+.cm-header-3 {
+ font-size: 150%;
+}
+.cm-header-4 {
+ font-size: 120%;
+}
+.cm-header-5 {
+ font-size: 100%;
+}
 div.cell.text_cell .cm-s-default .cm-header {
- color: #4c8be2;
+ font-family: "Exo_2", sans-serif;
+ font-weight: normal;
+ color: #7aa05d;
 }
 div.cell.text_cell .cm-s-default span.cm-variable-2 {
  color: #abb7ce;
